Fix: Reorder avatar above TUS APUESTAS and make avatar larger
- Avatar now appears above TUS APUESTAS button
- Avatar size increased from 16px to 40px
- Better visual hierarchy in centered content

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -93,6 +93,12 @@
   z-index: 49;
 }
 
+.centerContent .avatarSmall {
+  width: 40px;
+  height: 40px;
+  font-size: 1.2rem;
+}
+
 .rightControls {
   display: flex;
   align-items: flex-start;
